<resources>
    <string name="toolbar_header_edit_preset">Edit Preset</string>
    <string name="toolbar_header_list_presets">Custom Presets</string>

    <string name="notification_stop">STOP</string>
    <string name="button_stop">STOP SERVICE</string>
    <string name="button_start">START SERVICE</string>

    <string name="menu_emergency">Emergency</string>
    <string name="menu_location">My Location</string>
    <string name="menu_about">About</string>
    <string name="menu_save">Save</string>
    <string name="menu_delete_all">Delete All</string>
    <string name="menu_add">Add</string>

    <string name="transmission_protocol_ssl">SSL</string>
    <string name="transmission_protocol_tcp">TCP</string>
    <string name="transmission_protocol_udp">UDP</string>

    <string name="data_format_xml">XML</string>
    <string name="data_format_protobuf">Protobuf</string>

    <string name="role_team_member">Team Member</string>
    <string name="role_team_leader">Team Leader</string>
    <string name="role_hq">HQ</string>
    <string name="role_sniper">Sniper</string>
    <string name="role_medic">Medic</string>
    <string name="role_forward_observer">Forward Observer</string>
    <string name="role_rto">RTO</string>
    <string name="role_k9">K9</string>

    <string name="ssl_takserver_value">SSL¶Discord TAK Server¶discordtakserver.mooo.com¶58088</string>
    <string name="ssl_takserver_name">Discord TAK Server</string>
    <string name="ssl_takserver_ip">discordtakserver.mooo.com</string>
    <string name="ssl_takserver_port">58088</string>

    <string name="default_ssl_password">atakatak</string>

    <string name="tcp_freetakserver_value">TCP¶Public FreeTakServer¶204.48.30.216¶8087</string>
    <string name="tcp_freetakserver_name">Public FreeTakServer</string>
    <string name="tcp_freetakserver_ip">204.48.30.216</string>
    <string name="tcp_freetakserver_port">8087</string>

    <string name="udp_default_sa_value">UDP¶Default Multicast SA¶239.2.3.1¶6969</string>
    <string name="udp_default_sa">Default Multicast SA</string>
    <string name="udp_default_sa_ip">239.2.3.1</string>
    <string name="udp_default_sa_port">6969</string>

    <string name="go_back">Go back?</string>
    <string name="go_back_message">This will discard any current changes.</string>

    <string name="no_presets_found">No custom presets found!</string>
    <string name="fab_create_new_preset">CREATE NEW</string>
    <string name="fab_import_new_preset">IMPORT FROM FILE</string>

    <string name="unknown">UNKNOWN</string>
    <string name="blank" />
    <string name="refresh">REFRESH</string>

    <string name="battery_optimisation_dialog_title">Disable Battery Optimisation</string>
    <string name="battery_optimisation_dialog_message">Select "ALLOW" in the following window.</string>

    <string name="permissions_denied_chastisement">You need to grant all permissions!</string>

    <string name="location_coordinates">Coordinates</string>
    <string name="location_copy">COPY</string>
    <string name="location_latitude">Latitude:</string>
    <string name="location_longitude">Longitude:</string>
    <string name="location_mgrs">MGRS:</string>
    <string name="location_error">Error:</string>
    <string name="location_gps_fixes">GPS Satellites:</string>
    <string name="location_compass">Compass (MN)</string>
    <string name="location_bearing">Bearing (TN)</string>
    <string name="location_speed">Speed</string>
    <string name="location_altitude">Altitude (WGS84)</string>
    <string name="location_gps_status">GPS Status</string>
</resources>