<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CotActivity">

    <item
        android:id="@+id/emergency"
        android:icon="@drawable/emergency_not_active"
        android:title="@string/menu_emergency"
        app:showAsAction="always" />

    <item
        android:id="@+id/location"
        android:icon="@drawable/location"
        android:title="@string/menu_location"
        app:showAsAction="always" />

    <item
        android:id="@+id/chat"
        android:icon="@drawable/chat"
        android:title="@string/menu_chat"
        app:showAsAction="always" />

    <item
        android:id="@+id/about"
        android:icon="@drawable/info"
        android:title="@string/menu_about"
        app:showAsAction="never" />

</menu>