<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/layout_1_coords"
        style="@style/CardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="lollipop">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="@dimen/cardviewContentPadding"
                android:paddingEnd="@dimen/cardviewContentPadding"
                android:text="@string/location_coordinates"
                android:textSize="@dimen/locationTitleFontSize"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/latitude_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="3"
                    android:gravity="center_horizontal"
                    android:paddingStart="@dimen/cardviewContentPadding"
                    android:paddingEnd="@dimen/cardviewContentPadding"
                    android:text="@string/location_latitude" />

                <TextView
                    android:id="@+id/coords_lat_degrees"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="5"
                    android:gravity="center_horizontal"
                    android:paddingStart="@dimen/cardviewContentPadding"
                    android:paddingEnd="@dimen/cardviewContentPadding"
                    android:textSize="@dimen/locationCoordsFontSize"
                    android:typeface="monospace"
                    tools:text="51°42'19.808'" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/longitude_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="3"
                    android:gravity="center_horizontal"
                    android:paddingStart="@dimen/cardviewContentPadding"
                    android:paddingEnd="@dimen/cardviewContentPadding"
                    android:text="@string/location_longitude" />

                <TextView
                    android:id="@+id/coords_lon_degrees"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="5"
                    android:gravity="center_horizontal"
                    android:paddingStart="@dimen/cardviewContentPadding"
                    android:paddingEnd="@dimen/cardviewContentPadding"
                    android:textSize="@dimen/locationCoordsFontSize"
                    android:typeface="monospace"
                    tools:text=" 0°59'24.719'" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/mgrs_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="3"
                    android:gravity="center_horizontal"
                    android:paddingStart="@dimen/cardviewContentPadding"
                    android:paddingEnd="@dimen/cardviewContentPadding"
                    android:text="@string/location_mgrs" />

                <TextView
                    android:id="@+id/coords_mgrs"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="5"
                    android:gravity="center_horizontal"
                    android:paddingStart="@dimen/cardviewContentPadding"
                    android:paddingEnd="@dimen/cardviewContentPadding"
                    android:textSize="@dimen/locationCoordsFontSize"
                    android:typeface="monospace"
                    tools:text="31U CR 56670 40547" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="3"
                    android:gravity="center_horizontal"
                    android:paddingStart="@dimen/cardviewContentPadding"
                    android:paddingEnd="@dimen/cardviewContentPadding"
                    android:text="@string/location_error" />

                <TextView
                    android:id="@+id/coords_positional_error"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="5"
                    android:gravity="center_horizontal"
                    android:paddingStart="@dimen/cardviewContentPadding"
                    android:paddingEnd="@dimen/cardviewContentPadding"
                    android:textSize="@dimen/locationCoordsFontSize"
                    android:typeface="monospace"
                    tools:text="± 5m" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="3"
                    android:gravity="center_horizontal"
                    android:paddingStart="@dimen/cardviewContentPadding"
                    android:paddingEnd="@dimen/cardviewContentPadding"
                    android:text="@string/location_gps_fixes" />

                <TextView
                    android:id="@+id/gps_useful_satellites"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="5"
                    android:gravity="center_horizontal"
                    android:paddingStart="@dimen/cardviewContentPadding"
                    android:paddingEnd="@dimen/cardviewContentPadding"
                    android:textSize="@dimen/locationCoordsFontSize"
                    android:typeface="monospace"
                    tools:text="9" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="ButtonStyle">

                <Button
                    android:id="@+id/coord_format_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="@dimen/buttonBarMargin"
                    android:layout_weight="1"
                    tools:text="DMS" />

                <Button
                    android:id="@+id/coord_copy_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/buttonBarMargin"
                    android:layout_weight="1"
                    android:text="@string/location_copy" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/layout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/layout_1_coords">

        <androidx.cardview.widget.CardView
            style="@style/CardViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:targetApi="lollipop">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingStart="@dimen/cardviewContentPadding"
                    android:paddingEnd="@dimen/cardviewContentPadding"
                    android:text="@string/location_compass"
                    android:textSize="@dimen/locationTitleFontSize"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/compass_degrees"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textSize="@dimen/locationCoordsFontSize"
                    android:typeface="monospace"
                    tools:text="302.5°" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/CardViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:targetApi="lollipop">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingStart="@dimen/cardviewContentPadding"
                    android:paddingEnd="@dimen/cardviewContentPadding"
                    android:text="@string/location_bearing"
                    android:textSize="@dimen/locationTitleFontSize"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/bearing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:paddingStart="@dimen/cardviewContentPadding"
                    android:paddingEnd="@dimen/cardviewContentPadding"
                    android:textSize="@dimen/locationCoordsFontSize"
                    android:typeface="monospace"
                    tools:text="265.6°" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/layout_2">

        <androidx.cardview.widget.CardView
            style="@style/CardViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:targetApi="lollipop">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingStart="@dimen/cardviewContentPadding"
                    android:paddingEnd="@dimen/cardviewContentPadding"
                    android:text="@string/location_speed"
                    android:textSize="@dimen/locationTitleFontSize"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/speed_m_per_s"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:paddingStart="@dimen/cardviewContentPadding"
                    android:paddingEnd="@dimen/cardviewContentPadding"
                    android:textSize="@dimen/locationCoordsFontSize"
                    android:typeface="monospace"
                    tools:text="60 m/s" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/CardViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:targetApi="lollipop">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingStart="@dimen/cardviewContentPadding"
                    android:paddingEnd="@dimen/cardviewContentPadding"
                    android:text="@string/location_altitude"
                    android:textSize="@dimen/locationTitleFontSize"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/altitude_metres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:paddingStart="@dimen/cardviewContentPadding"
                    android:paddingEnd="@dimen/cardviewContentPadding"
                    android:textSize="@dimen/locationCoordsFontSize"
                    android:typeface="monospace"
                    tools:text="80 MSL" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
